tests/ui/wf/hir-wf-check-erase-regions.nll.stderr
error[E0277]: `&'a T` is not an iterator
  --> $DIR/hir-wf-check-erase-regions.rs:11:21
   |
LL |     type IntoIter = std::iter::Flatten<std::slice::Iter<'a, T>>;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&'a T` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `&'a T`
   = help: the trait `Iterator` is implemented for `&mut I`
   = note: required for `Flatten<std::slice::Iter<'a, T>>` to implement `Iterator`
note: required by a bound in `std::iter::IntoIterator::IntoIter`
  --> $SRC_DIR/core/src/iter/traits/collect.rs:LL:COL

error[E0277]: `&'a T` is not an iterator
  --> $DIR/hir-wf-check-erase-regions.rs:11:5
   |
LL |     type IntoIter = std::iter::Flatten<std::slice::Iter<'a, T>>;
   |     ^^^^^^^^^^^^^ `&'a T` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `&'a T`
   = help: the trait `Iterator` is implemented for `&mut I`
   = note: required for `&'a T` to implement `IntoIterator`
note: required by a bound in `Flatten`
  --> $SRC_DIR/core/src/iter/adapters/flatten.rs:LL:COL

error[E0277]: `&'a T` is not an iterator
  --> $DIR/hir-wf-check-erase-regions.rs:15:27
   |
LL |     fn into_iter(self) -> Self::IntoIter {
   |                           ^^^^^^^^^^^^^^ `&'a T` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `&'a T`
   = help: the trait `Iterator` is implemented for `&mut I`
   = note: required for `&'a T` to implement `IntoIterator`
note: required by a bound in `Flatten`
  --> $SRC_DIR/core/src/iter/adapters/flatten.rs:LL:COL

error[E0277]: `&T` is not an iterator
  --> $DIR/hir-wf-check-erase-regions.rs:15:27
   |
LL |     fn into_iter(self) -> Self::IntoIter {
   |                           ^^^^^^^^^^^^^^ `&T` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `&T`
   = help: the trait `Iterator` is implemented for `&mut I`
   = note: required for `&T` to implement `IntoIterator`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
